Fixed bug with login form on small window width

--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -2,6 +2,8 @@ div.login_form
 {
     background: lightgray;
     border: 5px darkgray;
-    max-width: 30%;
+    max-width: 400px;
+    width: 30%;
+    min-width: 300px;
     align-content: center;
 }
